# aegis-protocol

./: README.md  proxy.Dockerfile  pyproject.toml  railway.toml
.github/workflows/: ci.yml  publish.yml
aegis/: __init__.py  firewall.py  intent.py  verdict.py
aegis-rpc/: Cargo.toml
aegis-rpc/src/: config.rs  http_proxy.rs  main.rs  rpc.rs  sanitizer.rs  simulator.rs  svm_simulator.rs  types.rs  utxo_guard.rs
aegis/cli/: __init__.py  init_cmd.py  main.py  up_cmd.py
aegis/enclave/: vault.py
aegis/engines/: capital_velocity.py
aegis/integrations/: __init__.py  automaton.py  eliza.py  langchain.py  openclaw.py
aegis/oracles/: __init__.py  price_feed.py
aegis/proxy/: http_proxy.py
assets/: DESIGN_SYSTEM.md
cloud/: bloom.go  go.mod  swarm_aggregator.go  swarm_aggregator_test.go  twab.go
contracts/: foundry.toml
contracts/script/: Deploy.s.sol  DeployFactory.s.sol
contracts/src/: AegisVault.sol  PlimsollVaultFactory.sol
contracts/src/modules/: VelocityLimitModule.sol
contracts/test/: AegisVault.t.sol  PlimsollVault.t.sol  PlimsollVaultFactory.t.sol  VelocityLimitModule.t.sol
dapp/: tailwind.config.ts
dapp/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
dapp/src/app/dashboard/: page.tsx
dapp/src/components/: DeployVault.tsx  DepositWithdraw.tsx  EmergencyPanel.tsx  Header.tsx  ModuleStatus.tsx  SessionKeyManager.tsx  ThreatFeed.tsx  VaultConfig.tsx  VaultDashboard.tsx
dapp/src/hooks/: useFactory.ts  useVault.ts
dapp/src/lib/: contracts.ts  wagmi.ts
demo/: demo.tape  live_agent.py
deploy/nitro/: Dockerfile.enclave  vsock_server.py
deploy/nitro/terraform/: main.tf  outputs.tf  variables.tf
indexer/: Cargo.toml
indexer/src/: api.rs  evm_listener.rs  main.rs  processor.rs  schema.rs
plimsoll/: firewall.py
plimsoll/engines/: capital_velocity.py
plimsoll/proxy/: interceptor.py  threat_seed.py  vault_config.py
tests/: test_cli.py  test_http_proxy.py  test_integration_automaton.py  test_integration_eliza.py  test_integration_langchain.py  test_integration_openclaw.py  test_intent.py  test_oracles.py  test_zero_days_v102.py  test_zero_days_v103.py  test_zero_days_v104.py
