[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plimsoll-protocol"
version = "2.0.1"
description = "Deterministic execution substrate for autonomous capital. 7 mathematical physics engines between AI intent and on-chain action."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Plimsoll Protocol" },
]
keywords = ["ai-agents", "circuit-breaker", "web3", "defi", "safety", "execution-substrate", "deterministic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "httpx>=0.27.0",
    "cryptography>=42.0.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://plimsoll.network"
Repository = "https://github.com/scoootscooob/plimsoll-protocol"
Documentation = "https://github.com/scoootscooob/plimsoll-protocol#readme"
Issues = "https://github.com/scoootscooob/plimsoll-protocol/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "starlette>=0.37.0",
    "uvicorn>=0.29.0",
    "web3>=6.0.0",
    "requests>=2.31.0",
]
proxy = [
    "uvicorn>=0.29.0",
    "starlette>=0.37.0",
]
demo = [
    "openai>=1.0.0",
    "web3>=6.0.0",
    "anthropic>=0.40.0",
    "google-genai>=1.0.0",
]
automaton = [
    "automaton>=0.1.0",
]
openclaw = [
    "openclaw>=0.1.0",
]
langchain = [
    "langchain-core>=0.2.0",
]
eliza = [
    "eliza-framework>=0.1.0",
]
oracles = [
    "httpx>=0.27.0",
]

[project.scripts]
plimsoll = "plimsoll.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["plimsoll"]

[tool.hatch.build.targets.sdist]
include = [
    "plimsoll/",
    "tests/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
